<resources>
    <string name="app_name">Qompute!</string>
    <string name="rakitan_anda">Rakitan Anda</string>
    <string name="profil">Profil</string>
    <string name="buat_rakitan">Buat Rakitan</string>
    <string name="pencil_image">pencil image</string>
    <string name="cari_rakitan">Cari Rakitan</string>
    <string name="daftar_rakitanmu">Daftar Rakitanmu</string>
    <string name="jelajah">Jelajah</string>
    <string name="belum_ada_rakitan">Belum ada Rakitan!</string>
    <string name="cpu">cpu</string>
    <string name="processor">Processor</string>
    <string name="component_name">Component Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="price">Price</string>
    <string name="cari_komponen">Cari Komponen</string>
    <string name="kategori">Kategori</string>
    <string name="subkategori">Subkategori</string>
    <string name="merk_brand">Merk / Brand</string>
    <string name="link_pembelian">Link Pembelian</string>
    <string name="google_earch">Pencarian Google</string>
    <string name="harga">Harga</string>
    <string name="daftar_komponen">Daftar Komponen</string>
    <string name="rakit">Rakit</string>
    <string name="pilih_platform">Pilih platform</string>
    <string name="socket">Socket</string>
    <string name="delete_item">Delete Item</string>
    <string-array name="component_categories">
        <item>Casing</item>
        <item>HSF dan Fan</item>
        <item>Harddisk dan SSD</item>
        <item>Keyboard dan Mouse</item>
        <item>Monitor</item>
        <item>RAM</item>
        <item>Motherboard</item>
        <item>DVD ROM / Blue Ray</item>
        <item>Printer</item>
        <item>Processor / CPU</item>
        <item>Power Supply / PSU</item>
        <item>SoundCard</item>
        <item>Speaker</item>
        <item>VGA / Graphic Card</item>
    </string-array>
    <array name="component_resource_address">
        <item>@drawable/ic_case</item>
        <item>@drawable/ic_fan</item>
        <item>@drawable/ic_hard_disk</item>
        <item>@drawable/ic_keyboard</item>
        <item>@drawable/ic_computer</item>
        <item>@drawable/ic_ram</item>
        <item>@drawable/ic_motherboard</item>
        <item>@drawable/ic_optical</item>
        <item>@drawable/ic_printer</item>
        <item>@drawable/ic_cpu</item>
        <item>@drawable/ic_supply</item>
        <item>@drawable/ic_card_reader</item>
        <item>@drawable/ic_speaker</item>
        <item>@drawable/ic_graphic_card</item>
    </array>

    <string-array name="component_endpoint">
        <item>casing</item>
        <item>coolerfan</item>
        <item>harddisk</item>
        <item>Keyboard</item>
        <item>lcd</item>
        <item>memoryram</item>
        <item>motherboard</item>
        <item>optical</item>
        <item>printer</item>
        <item>processor</item>
        <item>psu</item>
        <item>soundcard</item>
        <item>speaker</item>
        <item>vga</item>
    </string-array>

    <string-array name="sub_component_endpoint">
        <item>PC</item> <!--RAM-->
        <item>SSD (SOLID STATE DISK)</item>
        <item>Harddisk Internal 3.5 For Desktop PC</item>
        <item>CPU Cooler / Heatsink</item>
        <item>Fan Casing</item>
    </string-array>
    <string-array name="processor_type">
        <item>Intel</item>
        <item>AMD</item>
    </string-array>

    <string-array name="socket_intel">
        <item>LGA 775</item>
        <item>LGA 1150</item>
        <item>LGA 1151</item>
        <item>LGA 1155</item>
        <item>LGA 2011</item>
        <item>LGA 2066</item>
    </string-array>

    <string-array name="socket_amd">
        <item>AM1</item>
        <item>AM2</item>
        <item>AM3</item>
        <item>AM4</item>
        <item>FM1</item>
        <item>FM2</item>
        <item>TR4</item>
    </string-array>

    <string-array name="number_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="build_component_list">
        <item>CPU</item>
        <item>Motherboard</item>
        <item>Graphic Card</item>
        <item>Memory</item>
        <item>HDD / SSD 1</item>
        <item>HDD / SSD 2</item>
        <item>Power Supply</item>
        <item>Casing</item>
        <item>HSF</item>
        <item>Optical</item>
        <item>Monitor 1</item>
        <item>Monitor 2</item>
        <item>Mouse / Keyboard 1</item>
        <item>Mouse / Keyboard 2</item>
        <item>Fan 1</item>
        <item>Fan 2</item>
        <item>Fan 3</item>
        <item>Fan 4</item>
        <item>Speaker</item>
        <item>Soundcard</item>
    </string-array>
    <string name="delete_component_button">delete component button</string>
    <string name="urutkan_harga">Urutkan Harga</string>
    <string name="urutkan_nama">Urutkan Nama</string>
    <string name="harga_min">Harga Min.</string>
    <string name="harga_max">Harga Max.</string>
    <string name="saring">Saring</string>
    <string name="cari">Cari</string>
    <string name="harga_total">Harga Total</string>
    <string name="save">Save</string>
    <string name="ganti_nama_rakitan">Ganti nama rakitan</string>
    <string name="rakitan_kosong">Rakitan tidak boleh kosong!</string>
    <string name="beli_di_bukalapak">Beli di Bukalapak Sekarang!</string>
    <string name="delete_build">Hapus Rakitan</string>
    <string name="edit_rakitan">Edit Rakitan</string>
    <string name="placeholder_item_count">3 Item</string>
    <string name="placeholder_price">Rp. 2.000.000,-</string>
    <string name="dapatkan_link_bukalapak">Beli Sekarang!</string>
    <string name="detail_komponen">Detail Komponen</string>
    <string name="tentang_aplikasi">Lainnya</string>
</resources>
