<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5"
            android:layout_marginStart="10dp">

        <TextView
                android:id="@+id/tv_component_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/component_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/tv_brand_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"/>
    </LinearLayout>

    <TextView
            android:layout_weight="1"
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="end"
            />
</LinearLayout>