<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/layout_texts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/tv_item_count"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/tv_component_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/processor"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                />

        <TextView
                android:id="@+id/tv_component_item_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_price"
                android:textSize="14sp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                />
    </LinearLayout>

    <TextView
            android:id="@+id/tv_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_item_count"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_texts"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0"
            />
</androidx.constraintlayout.widget.ConstraintLayout>