<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view_a"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_component_list"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/colorPrimary"
            android:elevation="3dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">

            <ImageButton
                    android:id="@+id/ib_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:paddingEnd="15dp"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:background="@color/colorPrimary"
                    android:tint="@color/white"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_komponen"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:context=".ui.activity.ComponentDetailActivity"
                    android:descendantFocusability="blocksDescendants"
                    >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="20dp">
                    <ImageView
                            android:id="@+id/iv_category"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/ic_cpu"
                            android:tint="@color/colorAccent"/>
                    <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/processor"
                            android:textSize="18sp"
                            android:layout_gravity="top"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginStart="20dp"
                            />
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/harga"/>
                    <TextView
                            android:id="@+id/tv_price_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/component_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/merk_brand"/>
                    <TextView
                            android:id="@+id/tv_brand_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/component_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/kategori"/>
                    <TextView
                            android:id="@+id/tv_category_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/component_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/subkategori"/>
                    <TextView
                            android:id="@+id/tv_subcategory_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/component_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"/>
                </LinearLayout>
                <Button
                        android:id="@+id/bt_buy_bukalapak_affiliate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/item_filter_button_all"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/beli_di_bukalapak"
                        android:textColor="@color/white"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                    <WebView
                            android:id="@+id/web_view"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="450dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>
