<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:id="@+id/card_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#d6d6d6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="0dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">
            <EditText
                    android:id="@+id/et_cari_rakitan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#d6d6d6"
                    android:textAlignment="center"
                    android:hint="@string/cari_rakitan"
                    android:textSize="16sp"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryDark"
                    tools:ignore="Autofill,TextFields"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_rakitanmu"
            app:layout_constraintTop_toBottomOf="@+id/card_search"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            android:id="@+id/recyclerView"/>

    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <LinearLayout
                android:id="@+id/bt_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="14dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pen"
                    android:tint="#ffffff"
                    android:contentDescription="@string/pencil_image"/>

            <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buat_rakitan"
                    android:textStyle="bold"
                    android:textColor="#ffffff"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>