<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.BuildingActivity"
        android:background="@color/white">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_component_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="3dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rakit"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar_component_list"
            android:layout_margin="20dp"
            android:id="@+id/linear_layout"
            >
        <TextView
                android:id="@+id/tv_processor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih_platform"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>
        <lib.kingja.switchbutton.SwitchMultiButton
                android:id="@+id/processor_switch"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:strokeRadius="5dp"
                app:strokeWidth="1dp"
                app:selectedTab="0"
                app:selectedColor="@color/colorAccent"
                app:switchTabs="@array/processor_type"
                app:textSize="14sp" />
        <TextView
                android:id="@+id/tv_socket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socket"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <lib.kingja.switchbutton.SwitchMultiButton
                    android:id="@+id/socket_switch_intel"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:strokeRadius="5dp"
                    app:strokeWidth="0.5dp"
                    app:selectedTab="0"
                    app:selectedColor="@color/colorPrimary"
                    app:switchTabs="@array/socket_intel"
                    app:textSize="10sp"
                    tools:ignore="SmallSp"/>
            <lib.kingja.switchbutton.SwitchMultiButton
                    android:id="@+id/socket_switch_amd"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:strokeRadius="5dp"
                    app:strokeWidth="0.5dp"
                    app:selectedTab="0"
                    app:selectedColor="@color/colorPrimary"
                    app:switchTabs="@array/socket_amd"
                    app:textSize="10sp"
                    tools:ignore="SmallSp"/>
        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            >

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>